--- a/templates/index.html
+++ b/templates/index.html
@@ -236,9 +236,7 @@ class="w-full h-48 object-cover">
 <i class="ri-github-fill"></i>
 <span>View Code</span>
 </a>
-<a href="#" class="text-primary hover:text-primary-dark flex items-center gap-1">
-<i class="ri-external-link-line"></i>
-<span>Live Demo</span>
+
 </a>
 </div>
 </div>
@@ -255,7 +253,28 @@ class="w-full h-48 object-cover">
 <i class="ri-github-fill"></i>
 <span>View Code</span>
 </a>
-
+<a href="#" class="text-primary hover:text-primary-dark flex items-center gap-1">
+<i class="ri-external-link-line"></i>
+<span>Live Demo</span>
+</a>
+</div>
+</div>
+</div>
+<div class="bg-white rounded-lg overflow-hidden shadow-lg">
+<img src="personal-portfolio/static/screencapture-127-0-0-1-5000-2025-02-17-14_51_15.png"
+alt="Project 2"
+class="w-full h-48 object-cover">
+<div class="p-6">
+<h3 class="text-xl font-semibold mb-2">personal-portfolio</h3>
+<p class="text-gray-600 mb-4">Personal Portfolio Website is a responsive, Flask-based site showcasing my skills, projects, and experiences with a dynamic design, smooth scroll animations, and embedded social media links for easy contact.</p>
+<div class="flex gap-4">
+<a href="https://github.com/AIwolfie/personal-portfolio" class="text-primary hover:text-primary-dark flex items-center gap-1">
+<i class="ri-github-fill"></i>
+<span>View Code</span>
+</a>
+<a href="#" class="text-primary hover:text-primary-dark flex items-center gap-1">
+<i class="ri-external-link-line"></i>
+<span>Live Demo</span>
 </a>
 </div>
 </div>
