--- a/templates/index.html
+++ b/templates/index.html
@@ -272,7 +272,7 @@ class="w-full h-48 object-cover">
 <i class="ri-github-fill"></i>
 <span>View Code</span>
 </a>
-<a href="#" class="text-primary hover:text-primary-dark flex items-center gap-1">
+<a href="aiwolfie.vercel.app" class="text-primary hover:text-primary-dark flex items-center gap-1">
 <i class="ri-external-link-line"></i>
 <span>Live Demo</span>
 </a>
