--- a/templates/index.html
+++ b/templates/index.html
@@ -315,7 +315,7 @@ Let's connect and secure the digital world
 <h2 class="text-2xl font-bold mb-8">Portfolio</h2>
 <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 md:gap-8">
 <div class="bg-white rounded-lg overflow-hidden shadow-lg">
-<img src="static/Screenshot 2025-02-17 103824.png"
+<img src="https://github.com/AIwolfie/personal-portfolio/blob/main/static/Screenshot%202025-02-17%20103824.png"
 alt="Project 1"
 class="w-full h-48 object-cover">
 <div class="p-6">
